# jobradar

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  monitor.yml
config/: companies.example.csv  matcher.example.yml
docs/: BUILD_PLAN.md  DESIGN.md
jobradar/: __main__.py  cli.py  detector.py  matcher.py  matcher_llm.py  pipeline.py  setup_wizard.py  store.py
jobradar/adapters/: ashby.py  base.py  greenhouse.py  lever.py  personio.py
jobradar/notify/: base.py  telegram.py
jobradar/render/: __init__.py  html.py  notion.py
jobradar/sources/: __init__.py  base.py  csv_source.py  notion_source.py
tests/: test_base.py  test_config.py  test_detector.py  test_matcher.py  test_setup_wizard.py  test_store.py
